--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,7 @@
 html {
-  font-family: Togalite, sans-serif;
   font-size: 62.5%;
+}
+
+html, button, input, text {
+  font-family: Togalite, sans-serif;
 }
