--- a/src/assets/styles/components/base-button.scss
+++ b/src/assets/styles/components/base-button.scss
@@ -1,9 +1,11 @@
 %base-button {
   & {
-    padding: 0 0.8em;
+    padding: 0 1.5em;
     font-size: $font-md;
-    line-height: 1.8;
+    line-height: 2.5;
     cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
     transition: background-color 0.2s ease, border-color 0.2s ease;
   }
 
