👕 Fixed ESLint and stylelint errors

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,9 @@ html {
   font-size: 62.5%;
 }
 
-html, button, input, text {
+html,
+button,
+input,
+text {
   font-family: Togalite, sans-serif;
 }
