--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -3,7 +3,7 @@ $_primary: #e01c84;
 // セカンダリカラー
 $_secondary: #9a6bb5;
 // 警告カラー
-$_caution: #9A6BB5;
+$_caution: #9a6bb5;
 // 非活性カラー
 $_inactive: #ccc;
 // 白
