--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -6,3 +6,15 @@
     0 36.5px 29.2px rgba(0, 0, 0, 0.048),
     0 100px 80px rgba(0, 0, 0, 0.07);
 }
+
+@mixin marker-text($duration: 2s) {
+  & {
+    background: linear-gradient(to left, rgba($_primary, 0.2), rgba($_primary, 0.2) 50%, transparent 50%) repeat-x 0 0.5em;
+    background-size: 200% 0.8em;
+    transition: background-position $duration cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  &.-marked {
+    background-position: -100% 0.5em;
+  }
+}
